Added register.php/added css into style.css

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,8 +1,12 @@
-browser.id=Chrome
 copy.src.files=false
 copy.src.on.open=false
-copy.src.target=C:\\xampp\\htdocs\\PhpProject1
+copy.src.target=C:\\xampp\\htdocs\\ICT1005-Project
 hostname=localhost
+index.file=register.php
 port=8000
-run.as=INTERNAL
-url=http://localhost:8000/
+remote.connection=INF1005-LAMP-eae50f
+remote.directory=
+remote.upload=ON_RUN
+router=products.php
+run.as=REMOTE
+url=http://35.212.189.116
