Added saving of user info into database

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,7 +2,7 @@ copy.src.files=false
 copy.src.on.open=false
 copy.src.target=C:\\xampp\\htdocs\\ICT1005-Project
 hostname=localhost
-index.file=register.php
+index.file=login.php
 port=8000
 remote.connection=INF1005-LAMP-eae50f
 remote.directory=
