--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,7 @@
 browser.id=Chrome
 copy.src.files=false
 copy.src.on.open=false
-copy.src.target=C:\\xampp\\htdocs\\PhpProject1
+copy.src.target=/C:\\xampp\\htdocs\\PhpProject1
 hostname=localhost
 port=8000
 run.as=INTERNAL
