--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,9 +1,9 @@
-browser.id=SL[/Browsers/MicrosoftEdgeBrowser
+browser.id=Chrome
 
 copy.src.files=false
 copy.src.on.open=false
 copy.src.target=C:\\xampp\\htdocs\\ICT1005-Project
-copy.src.target=/C:\\xampp\\htdocs\\PhpProject1
+copy.src.target=C:\\xampp\\htdocs\\PhpProject1
 hostname=localhost
 index.file=register.php
 port=8000
